ecmascript/parser/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:4:19
  |
4 | var NUMBER1 = var NUMBER-;  //expect error
  |                   ^^^^^^

error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:4:25
  |
4 | var NUMBER1 = var NUMBER-;  //expect error
  |                         ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:7:15
  |
7 | var NUMBER2 = -(null - undefined);
  |               ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:8:15
  |
8 | var NUMBER3 = -(null - null);
  |               ^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:9:15
  |
9 | var NUMBER4 = -(undefined - undefined);
  |               ^

error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:12:13
   |
12 | var NUMBER =-;
   |             ^

error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/expressions/unaryOperators/negateOperator/negateOperatorInvalidOperations/input.ts:12:14
   |
12 | var NUMBER =-;
   |              ^

